--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ryan Collingham <ryan@tokencard.io>"]
 edition = "2018"
 description = "Easy launch agents for macOS"
 license = "MIT"
+repository = "https://github.com/ryanc414/launchify"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
